--- a/SisVentas/SistemasVentas/app.config
+++ b/SisVentas/SistemasVentas/app.config
@@ -5,7 +5,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="ContosoDbContext" connectionString="server=localhost;port=3306;Database=ContosoUniversity;Uid=root;Pwd=1234" providerName="MySql.Data.MySqlClient" />
+    <add name="ContosoDbContext" connectionString="server=localhost;port=3306;Database=SistemaVentas;Uid=root;Pwd=1234" providerName="MySql.Data.MySqlClient" />
   </connectionStrings>
   <system.data>
     <DbProviderFactories>
