--- a/SisVentas/BusinessEntities/BusinessEntities.csproj
+++ b/SisVentas/BusinessEntities/BusinessEntities.csproj
@@ -55,6 +55,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Categorias.cs" />
+    <Compile Include="Presentacion.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
