Se agrego la referencia de BusinessEntities a la libreria de DAL

--- a/SisVentas/SisVentas.DataAccessLayer/SisVentas.DataAccessLayer.csproj
+++ b/SisVentas/SisVentas.DataAccessLayer/SisVentas.DataAccessLayer.csproj
@@ -54,11 +54,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CategoriaDAL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\BusinessEntities\BusinessEntities.csproj">
+      <Project>{7e9fd8fa-6149-434f-86eb-9f63f6ea9ed8}</Project>
+      <Name>BusinessEntities</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
