--- a/SisVentas/SistemasVentas/SistemasVentas.csproj
+++ b/SisVentas/SistemasVentas/SistemasVentas.csproj
@@ -54,8 +54,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Cliente.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SistemaDBContext.cs" />
+    <Compile Include="Trabajador.cs" />
+    <Compile Include="Venta.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
