--- a/SisVentas/SistemasVentas/SistemasVentas.csproj
+++ b/SisVentas/SistemasVentas/SistemasVentas.csproj
@@ -55,7 +55,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Cliente.cs" />
+    <Compile Include="Ingreso.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Proveedor.cs" />
     <Compile Include="SistemaDBContext.cs" />
     <Compile Include="Trabajador.cs" />
     <Compile Include="Venta.cs" />
