--- a/SisVentas/BusinessEntities/BusinessEntities.csproj
+++ b/SisVentas/BusinessEntities/BusinessEntities.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Presentacion.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Proveedor.cs" />
+    <Compile Include="Trabajador.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
