--- a/SisVentas/SisVentas.BusinessEntities/SisVentas.BusinessEntities.csproj
+++ b/SisVentas/SisVentas.BusinessEntities/SisVentas.BusinessEntities.csproj
@@ -54,6 +54,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SisVentasDbContext.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
