--- a/SisVentas/BusinessEntities/app.config
+++ b/SisVentas/BusinessEntities/app.config
@@ -5,8 +5,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="TeamEcommerce" connectionString="Server=localhost; Port=3307; 
-         Database=TeamEcommerce; Uid=root; pwd=Sobrinos4" providerName="MySql.Data.MySqlClient"/>
+    <add name="SisVentasDbContext" connectionString="Server=localhost; Port=3307; 
+         Database=SisVentas; Uid=root; pwd=Sobrinos4" providerName="MySql.Data.MySqlClient"/>
   </connectionStrings>
   <system.data>
     <DbProviderFactories>
