--- a/SisVentas/SisVentas.WinForm/App.config
+++ b/SisVentas/SisVentas.WinForm/App.config
@@ -1,5 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+  <connectionStrings>
+    <add name="SisVentasDbContext" connectionString="Server=localhost; Port=3307; 
+         Database=SisVentas; Uid=root; pwd=Sobrinos4" providerName="MySql.Data.MySqlClient"/>
+  </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
