--- a/SisVentas/SisVentas.DataAccessLayer/app.config
+++ b/SisVentas/SisVentas.DataAccessLayer/app.config
@@ -5,8 +5,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="TeamEcommerce" connectionString="Server=localhost; Port=3307; 
-         Database=TeamEcommerce; Uid=root; pwd=Sobrinos4" providerName="MySql.Data.MySqlClient"/>
+    <add name="TeamEcommerce" connectionString="Server=localhost; Port=3307;           Database=TeamEcommerce; Uid=root; pwd=Sobrinos4" providerName="MySql.Data.MySqlClient" />
   </connectionStrings>
   <system.data>
     <DbProviderFactories>
@@ -24,4 +23,12 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     <provider invariantName="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.Entity.EF6, Version=6.9.12.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d"></provider></providers>
   </entityFramework>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="MySql.Data" publicKeyToken="c5687fc88969c44d" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-8.0.14.0" newVersion="8.0.14.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
