--- a/SisVentas/SisVentas.BusinessEntities/SisVentas.BusinessEntities.csproj
+++ b/SisVentas/SisVentas.BusinessEntities/SisVentas.BusinessEntities.csproj
@@ -56,6 +56,11 @@
   <ItemGroup>
     <Compile Include="Categoria.cs" />
     <Compile Include="Cliente.cs" />
+    <Compile Include="Migrations\201901291755007_initial.cs" />
+    <Compile Include="Migrations\201901291755007_initial.Designer.cs">
+      <DependentUpon>201901291755007_initial.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Presentacion.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Proveedor.cs" />
@@ -63,8 +68,15 @@
     <Compile Include="Trabajador.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="app.config" />
+    <None Include="app.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201901291755007_initial.resx">
+      <DependentUpon>201901291755007_initial.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
