--- a/SisVentas/SisVentas.WinForm/App.config
+++ b/SisVentas/SisVentas.WinForm/App.config
@@ -5,7 +5,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="SisVentasDbContext" connectionString="Server=localhost;Port=3306;Database=SisVentas;Uid=root;Pwd=root;" providerName="MySql.Data.MySqlClient"/>
+    <add name="SisVentasDbContext" connectionString="Server=localhost;Port=3306;Database=SisVentas;Uid=root;Pwd=owaltek.2019;" providerName="MySql.Data.MySqlClient"/>
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
