--- a/SisVentas/ClassLibrary1/SistemasVentas.DataAccessLayer.csproj
+++ b/SisVentas/ClassLibrary1/SistemasVentas.DataAccessLayer.csproj
@@ -55,6 +55,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ClienteDAL.cs" />
+    <Compile Include="IngresoDAL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TrabajadorDAL.cs" />
   </ItemGroup>
