Se hizo el DAL, de ventas

--- a/SisVentas/ClassLibrary1/SistemasVentas.DataAccessLayer.csproj
+++ b/SisVentas/ClassLibrary1/SistemasVentas.DataAccessLayer.csproj
@@ -56,6 +56,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TrabajadorDAL.cs" />
+    <Compile Include="VentasDAL.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
