--- a/SisVentas/SisVentas.BusinessLogicLayer/SisVentas.BusinessLogicLayer.csproj
+++ b/SisVentas/SisVentas.BusinessLogicLayer/SisVentas.BusinessLogicLayer.csproj
@@ -56,6 +56,7 @@
   <ItemGroup>
     <Compile Include="CategoriaBLL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TrabajadorBLL.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
