--- a/SisVentas/SisVentas.DataAccessLayer/SisVentas.DataAccessLayer.csproj
+++ b/SisVentas/SisVentas.DataAccessLayer/SisVentas.DataAccessLayer.csproj
@@ -65,6 +65,7 @@
     <Compile Include="CategoriaDAL.cs" />
     <Compile Include="PresentacionDAL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TrabajadorDAL.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
