--- a/SisVentas/SistemasVentas.BussinesLogicLayer/SistemasVentas.BussinesLogicLayer.csproj
+++ b/SisVentas/SistemasVentas.BussinesLogicLayer/SistemasVentas.BussinesLogicLayer.csproj
@@ -54,11 +54,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="obj\Debug\TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs" />
+    <Compile Include="obj\Debug\TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs" />
+    <Compile Include="obj\Debug\TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TrabajadorBLL.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+    <None Include="obj\Debug\build.force" />
+    <None Include="obj\Debug\DesignTimeResolveAssemblyReferencesInput.cache" />
+    <None Include="obj\Debug\SistemasVentas.BussinesLogicLayer.csproj.CoreCompileInputs.cache" />
+    <None Include="obj\Debug\SistemasVentas.BussinesLogicLayer.csprojAssemblyReference.cache" />
+    <None Include="obj\Release\SistemasVentas.BussinesLogicLayer.csproj.CoreCompileInputs.cache" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
@@ -70,6 +78,11 @@
       <Project>{076f1d5e-9e12-4499-b643-642f51c468bc}</Project>
       <Name>SistemasVentas</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="bin\Debug\" />
+    <Folder Include="bin\Release\" />
+    <Folder Include="obj\Debug\TempPE\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
