--- a/SisVentas/ClassLibrary1/SistemasVentas.DataAccessLayer.csproj
+++ b/SisVentas/ClassLibrary1/SistemasVentas.DataAccessLayer.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{872C05A3-ACD5-4A6B-959C-2BEA6BE5C289}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ClassLibrary1</RootNamespace>
-    <AssemblyName>ClassLibrary1</AssemblyName>
+    <RootNamespace>SistemasVentas.DataAccessLayer</RootNamespace>
+    <AssemblyName>SistemasVentas.DataAccessLayer</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -54,11 +54,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ClienteDAL.cs" />
-    <Compile Include="IngresoDAL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TrabajadorDAL.cs" />
-    <Compile Include="VentasDAL.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
