--- a/SisVentas/SistemasVentas.BussinesLogicLayer/SistemasVentas.BussinesLogicLayer.csproj
+++ b/SisVentas/SistemasVentas.BussinesLogicLayer/SistemasVentas.BussinesLogicLayer.csproj
@@ -59,6 +59,7 @@
     <Compile Include="obj\Debug\TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TrabajadorBLL.cs" />
+    <Compile Include="VentasBILL.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
