--- a/SisVentas/BusinessEntities/app.config
+++ b/SisVentas/BusinessEntities/app.config
@@ -6,7 +6,7 @@
   </configSections>
   <connectionStrings>
     <add name="SisVentasDbContext" connectionString="Server=localhost; Port=3307; 
-         Database=SisVentas; Uid=root; pwd=madiluro06" providerName="MySql.Data.MySqlClient"/>
+         Database=SisVentas; Uid=root; pwd=Sobrinos4" providerName="MySql.Data.MySqlClient"/>
   </connectionStrings>
   <system.data>
     <DbProviderFactories>
