--- a/SisVentas/SisVentas.BusinessLogicLayer/SisVentas.BusinessLogicLayer.csproj
+++ b/SisVentas/SisVentas.BusinessLogicLayer/SisVentas.BusinessLogicLayer.csproj
@@ -72,5 +72,9 @@
       <Name>SisVentas.DataAccessLayer</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="bin\Debug\" />
+    <Folder Include="bin\Release\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
