--- a/SisVentas/SisVentas.DataAccessLayer/SisVentas.DataAccessLayer.csproj
+++ b/SisVentas/SisVentas.DataAccessLayer/SisVentas.DataAccessLayer.csproj
@@ -77,5 +77,9 @@
       <Name>BusinessEntities</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="bin\Debug\" />
+    <Folder Include="bin\Release\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
