--- a/SisVentas/SisVentas.BusinessLogicLayer/SisVentas.BusinessLogicLayer.csproj
+++ b/SisVentas/SisVentas.BusinessLogicLayer/SisVentas.BusinessLogicLayer.csproj
@@ -55,6 +55,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CategoriaBLL.cs" />
+    <Compile Include="PresentacionBLL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TrabajadorBLL.cs" />
   </ItemGroup>
