--- a/SisVentas/SisVentas.WinForm/App.config
+++ b/SisVentas/SisVentas.WinForm/App.config
@@ -2,7 +2,8 @@
 <configuration>
   <configSections>
         <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-    </configSections>
+      <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />  
+  </configSections>
   <connectionStrings>
     <add name="SisVentasDbContext" connectionString="Server=localhost; Port=3307;
          Database=SisVentas; Uid=root; pwd=Sobrinos4" providerName="MySql.Data.MySqlClient" />
@@ -15,8 +16,15 @@
       <remove invariant="MySql.Data.MySqlClient" />
       <add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient" description=".Net Framework Data Provider for MySQL" type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version=6.9.12.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
     </DbProviderFactories>
-  </system.data><entityFramework>
+  </system.data>
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
+      <parameters>
+        <parameter value="v13.0" />
+      </parameters>
+    </defaultConnectionFactory>
     <providers>
       <provider invariantName="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.Entity.EF6, Version=6.9.12.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d"></provider>
     </providers>
-  </entityFramework></configuration>
+  </entityFramework>
+</configuration>
