--- a/SisVentas/SisVentas.DataAccessLayer/SisVentas.DataAccessLayer.csproj
+++ b/SisVentas/SisVentas.DataAccessLayer/SisVentas.DataAccessLayer.csproj
@@ -63,6 +63,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CategoriaDAL.cs" />
+    <Compile Include="ClienteDAL.cs" />
     <Compile Include="PresentacionDAL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TrabajadorDAL.cs" />
