--- a/SisVentas/SisVentas.BusinessLogicLayer/SisVentas.BusinessLogicLayer.csproj
+++ b/SisVentas/SisVentas.BusinessLogicLayer/SisVentas.BusinessLogicLayer.csproj
@@ -58,6 +58,7 @@
     <Compile Include="ClienteBLL.cs" />
     <Compile Include="PresentacionBLL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ProveedorBLL.cs" />
     <Compile Include="TrabajadorBLL.cs" />
   </ItemGroup>
   <ItemGroup>
