--- a/SisVentas/SisVentas.WinForm/App.config
+++ b/SisVentas/SisVentas.WinForm/App.config
@@ -6,11 +6,16 @@
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
-    <add name="SistemaDBContext" connectionString="server=localhost;port=3306;Database=SistemasVentas;Uid=root;Pwd=esquivel8184998902" providerName="MySql.Data.MySqlClient" />
+    <add name="SistemaDBContext" connectionString="server=localhost;port=3306;Database=SistemasVentas;Uid=root;Pwd=1234" providerName="MySql.Data.MySqlClient" />
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
   </startup>
+  <ItemGroup>
+    <ExcludeFromStyleCop Include="$(IntermediateOutputPath)\**\*.cs" >
+      <Visible>False</Visible>
+    </ExcludeFromStyleCop>
+  </ItemGroup>
   
   <system.data>
     <DbProviderFactories>
