--- a/SisVentas/SistemasVentas/app.config
+++ b/SisVentas/SistemasVentas/app.config
@@ -1,12 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-    
-  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
+
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
-    <add name="SistemaDBContext" connectionString="server=localhost;port=3306;Database=SistemasVentas;Uid=root;Pwd=kratos9898" providerName="MySql.Data.MySqlClient" />
+    <add name="SistemaDBContext" connectionString="server=localhost;port=3306;Database=SistemasVentas;Uid=root;Pwd=1234" providerName="MySql.Data.MySqlClient" />
   </connectionStrings>
   <system.data>
     <DbProviderFactories>
