1. se elimino metodo getclientByLastName ya que solo busca por Id 2. Se creo metodo eliminar en el form cliente 3.Se arreglaron bugs en el CRUD de cliente

--- a/.gitignore
+++ b/.gitignore
@@ -328,3 +328,6 @@ ASALocalRun/
 
 # MFractors (Xamarin productivity tool) working folder 
 .mfractor/
+/SisVentas/SistemasVentas/Migrations/201901300154384_initial.resx
+/SisVentas/SistemasVentas/Migrations/201901300154384_initial.Designer.cs
+/SisVentas/SistemasVentas/Migrations/201901300154384_initial.cs
